--- a/src/components/components.css
+++ b/src/components/components.css
@@ -741,19 +741,19 @@
 
 /* categories start */
 
-.container {
+.container-categories {
   min-height: 150vh;
   max-width: 1200px;
   padding: 150px 20px;
   margin: 0 auto;
 }
 
-.header {
+.header-categories {
   text-align: center;
   margin-bottom: 40px;
 }
 
-.title {
+.title-categories {
   font-size: 48px;
   margin-bottom: 20px;
   line-height: 1.2;
@@ -966,7 +966,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .title {
+  .title-categories {
     font-size: 36px;
     margin-bottom: 40px;
   }
@@ -1000,7 +1000,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .title {
+  .title-categories {
     font-size: 28px;
     margin-bottom: 30px;
   }
@@ -1728,6 +1728,21 @@
     margin: 20px 10px;
     min-width: 45%;
   }
+  .idea-container .cards .card .card-body span {
+    top: -2px;
+    margin-top: 0;
+    visibility: visible;
+    color: #bcb8b8;
+    letter-spacing: 0.5px;
+    transition: 1s;
+  }
+  .idea-container .cards .card .card-body ion-icon {
+    color: #f1f1f1;
+    background: #1976d2;
+    margin-top: 20px;
+    padding: 10px;
+    margin-left: 0;
+  }
   .idea-container .text-container {
     width: calc(100% - 100px);
     margin-left: 50px;
@@ -1982,6 +1997,7 @@
     margin: 20px 10px;
     min-width: 100%;
   }
+  
   .idea-container .text-container {
     width: calc(100% - 30px);
     margin-left: 15px;
@@ -2043,7 +2059,7 @@
 .popup-overlay.active {
   display: flex;
   opacity: 1;
-  z-index: 10001;
+  z-index: 10009;
 }
 .popup-overlay.active .close{
   position: fixed;
