--- a/src/app/location/location.module.css
+++ b/src/app/location/location.module.css
@@ -1,8 +1,12 @@
 .containerlocation {
   width: 100vw;
   height: 100vh;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .titlelocation {
@@ -22,6 +26,7 @@
 .mapContainer {
   width: 100%;
   height: 100%;
+  flex: 1;
 }
 
 .mapLoading {
@@ -69,10 +74,14 @@
 }
 
 @keyframes bounce {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: rotate(-45deg) translate(0, 0);
   }
+
   50% {
     transform: rotate(-45deg) translate(0, -5px);
   }
 }
+
